# sneaker

./: .gitignore  README.md  assets.go  build.cmd  config.json.bak  example.config.json  go.mod  go.sum  map_sizes.txt  map_sizes.txt.bak  package.json  postcss.config.js  pyproject.toml  sneaker.json  tailwind.config.js  tsconfig.json  webpack.config.js
.ci/: entrypoint.ts  init.ts
cmd/sneaker-desktop/: main.go
cmd/sneaker-server/: main.go  versioninfo.json
desktop/: app.go
docs/: API.md
server/: config.go  dcs.go  discord.go  http.go  session.go  state.go  static.go  tacview_client.go
sneaker-server/: __main__.py  http.py  tacview_client.py
src/: App.tsx  App.tsx.bak  Constants.ts  DataSaver.ts  SneakerClient.ts  index.css  index.html  index.tsx  mgrs.d.ts  react-app-env.d.ts  util.tsx  worker.ts
src/components/: AboutSettings.tsx  Console.tsx  DebugSettings.tsx  DetailedCoords.tsx  DrawConsoleTab.tsx  Map.tsx  MapEntity.tsx  MapGeometryInfo.tsx  MapIcon.tsx  MapSettings.tsx  MissionTimer.tsx  NewMap.tsx  NewNewMap.tsx  NewNewNewMap.tsx  ProfileSettings.tsx  ProfileTagList.tsx  ScratchPad.tsx  Settings.tsx
src/data/airbases/: caucasus.json  falklands.json  marianaislands.json  nevada.json  normandy.json  sinaimap.json  (+3 more)
src/dcs/: aircraft.ts
src/hooks/: useKeyPress.tsx  useRenderGeometry.tsx  useRenderGroundUnits.tsx  useRenderTracks.tsx
src/maps/: Syria.tsx
src/stores/: AlertStore.tsx  EntityMetadataStore.tsx  GeometryStore.tsx  HackStore.tsx  ProfileStore.tsx  ServerStore.tsx  SettingsStore.tsx  TrackStore.tsx
src/types/: airbase.ts  entity.ts
(+11 files in other folders)
