[tool.poetry]
name = "sneaker"
version = "0.1.0"
description = ""
authors = ["andrei <b1naryth1ef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio-sse = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
